package main

import (
	"context"
	"log"
	"net/http"
	"strconv"
	"sync"
	"time"

	"github.com/gin-gonic/gin"
	"github.com/gorilla/websocket" // âœ… æ–°å¢
	"github.com/redis/go-redis/v9"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	vehiclev1 "github.com/xuewentao/cheya/api/vehicle/v1"
)

// ç®€æ˜“è¿æ¥æ± 
var (
	clients   = make(map[*websocket.Conn]bool) // WebSocket å®¢æˆ·ç«¯è¿æ¥æ± 
	broadcast = make(chan string)              // å¹¿æ’­æ¶ˆæ¯é€šé“
	mutex     sync.Mutex                       // ä¿æŠ¤ clients map çš„äº’æ–¥é”
)

// WebSocket upgrader é…ç½®
var upgrader = websocket.Upgrader{
	CheckOrigin: func(r *http.Request) bool {
		return true // å…è®¸æ‰€æœ‰æ¥æºï¼ˆç”Ÿäº§ç¯å¢ƒéœ€è¦æ›´ä¸¥æ ¼çš„æ£€æŸ¥ï¼‰
	},
}

func main() {
	//åˆå§‹åŒ– client  ç”¨ç½‘å…³æ¥ä½¿ç”¨ http
	//ç”Ÿäº§ç¯å¢ƒä¸€èˆ¬ä½¿ç”¨æœåŠ¡å‘ç°
	conn, err := grpc.NewClient("localhost:50051",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil {
		log.Fatalf("âŒ Failed to connect gRPC server %v", err)
	}
	defer conn.Close()
	//åˆ›å»º grpc client å­˜æ ¹
	vehicleClient := vehiclev1.NewVehicleServiceClient(conn)
	log.Println("âœ… Connected to Vehicle Service(gRPC)")

	// åˆ›å»º Redis å®¢æˆ·ç«¯
	rdb := redis.NewClient(&redis.Options{Addr: "localhost:6379"})
	defer rdb.Close()

	//1.Redis è®¢é˜…
	go func() {
		log.Println("ğŸ‘‚ Gateway subscribing to Redis channel: vehicle:update")

		sub := rdb.Subscribe(context.Background(), "vehicle:update")
		ch := sub.Channel()

		for msg := range ch {
			log.Printf("ğŸ“© Received from Redis: %s", msg.Payload)
			broadcast <- msg.Payload
		}
	}()
	//2.WebSocket å¹¿æ’­åç¨‹
	go func() {
		for {
			msg := <-broadcast
			log.Printf("ğŸ“¡ Broadcasting to %d clients", len(clients))

			mutex.Lock()
			for client := range clients {
				err := client.WriteMessage(websocket.TextMessage, []byte(msg))
				if err != nil {
					log.Printf("âŒ WS Error: %v", err)
					client.Close()
					delete(clients, client)
				}
			}
			mutex.Unlock()
		}
	}()
	//3.åˆå§‹åŒ– Gin
	r := gin.Default()

	// CORS ä¸­é—´ä»¶ - å…è®¸å‰ç«¯è·¨åŸŸè®¿é—®
	r.Use(func(c *gin.Context) {
		c.Writer.Header().Set("Access-Control-Allow-Origin", "*")
		c.Writer.Header().Set("Access-Control-Allow-Credentials", "true")
		c.Writer.Header().Set("Access-Control-Allow-Headers", "Content-Type, Content-Length, Accept-Encoding, X-CSRF-Token, Authorization, accept, origin, Cache-Control, X-Requested-With")
		c.Writer.Header().Set("Access-Control-Allow-Methods", "POST, OPTIONS, GET, PUT, DELETE")

		if c.Request.Method == "OPTIONS" {
			c.AbortWithStatus(204)
			return
		}

		c.Next()
	})

	//å®šä¹‰è·¯ç”± GET /api/vi/vehicles/:id
	r.GET("/api/v1/vehicles/:id", func(c *gin.Context) {
		//è·å– URL å‚æ•°
		vehicleID := c.Param("id")

		//è®¾ç½®è¶…æ—¶ä¸Šä¸‹æ–‡
		ctx, concel := context.WithTimeout(context.Background(), 2*time.Second)
		defer concel()

		//å‘èµ· gRPC è°ƒç”¨
		resp, err := vehicleClient.GetVehicle(ctx, &vehiclev1.GetVehicleRequest{
			VehicleId: vehicleID,
		})
		//é”™è¯¯å¤„ç†
		if err != nil {
			log.Printf("âŒ gRPC called failed: %v", err)
			//è¿”å› 500
			c.JSON(500, gin.H{
				"error": err.Error(),
			})
			return
		}
		//æˆåŠŸå“åº”
		c.JSON(http.StatusOK, gin.H{
			"code":    200,
			"message": "success",
			"data":    resp.Vehicle,
		})
	})

	//GET /api/v1/vehicles
	r.GET("/api/v1/vehicles", func(c *gin.Context) {
		// ä»æŸ¥è¯¢å‚æ•°è·å–åˆ†é¡µä¿¡æ¯ï¼Œè®¾ç½®é»˜è®¤å€¼
		page := int32(1)
		pageSize := int32(100)

		// è§£æ page å‚æ•°
		if pageParam := c.Query("page"); pageParam != "" {
			if p, err := strconv.ParseInt(pageParam, 10, 32); err == nil && p > 0 {
				page = int32(p)
			}
		}

		// è§£æ pageSize å‚æ•°
		if pageSizeParam := c.Query("pageSize"); pageSizeParam != "" {
			if ps, err := strconv.ParseInt(pageSizeParam, 10, 32); err == nil && ps > 0 {
				pageSize = int32(ps)
			}
		}

		//æ„é€  grpc è¯·æ±‚
		req := &vehiclev1.ListVehiclesRequest{
			Page:     page,
			PageSize: pageSize,
		}
		ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
		defer cancel()

		//2.è°ƒç”¨ grpc
		resp, err := vehicleClient.ListVehicles(ctx, req)
		if err != nil {
			c.JSON(500, gin.H{"error": err.Error()})
			return
		}
		//è¿”å› json
		c.JSON(200, gin.H{
			"code": 200,
			"data": gin.H{
				"items": resp.Vehicles,
				"total": resp.TotalCount,
			},
		})
	})

	// è½¦è¾†æ§åˆ¶æ¥å£
	r.POST("/api/v1/vehicles/:vin/control", func(c *gin.Context) {
		vin := c.Param("vin")

		var body struct {
			Action string `json:"action"`
		}

		if err := c.BindJSON(&body); err != nil {
			c.JSON(400, gin.H{"error": "Invalid request body"})
			return
		}

		// éªŒè¯åŠ¨ä½œç±»å‹
		if body.Action != "STOP" && body.Action != "START" {
			c.JSON(400, gin.H{"error": "Invalid action. Must be STOP or START"})
			return
		}

		// æ„é€ å‘½ä»¤å¹¶å‘å¸ƒåˆ° Redis
		cmd := body.Action + ":" + vin
		err := rdb.Publish(context.Background(), "vehicle:commands", cmd).Err()
		if err != nil {
			c.JSON(500, gin.H{"error": err.Error()})
			return
		}

		log.Printf("ğŸ“¢ Command sent: %s for vehicle %s", body.Action, vin)
		c.JSON(200, gin.H{
			"code":    200,
			"message": "Command sent successfully",
			"data": gin.H{
				"vin":    vin,
				"action": body.Action,
			},
		})
	})
	//WebSocket ç»“æ„
	//ws æŒ‡çš„æ˜¯ WebSocket è¿æ¥å¯¹è±¡
	r.GET("/ws", func(c *gin.Context) {
		ws, err := upgrader.Upgrade(c.Writer, c.Request, nil)
		if err != nil {
			log.Fatalf("âŒ WS Upgrade failed: %v", err)
			return
		}
		mutex.Lock()
		clients[ws] = true
		mutex.Unlock()
		log.Println("ğŸ”Œ New Browser Connected!")

		for {
			if _, _, err := ws.ReadMessage(); err != nil {
				mutex.Lock()
				delete(clients, ws)
				mutex.Unlock()
				break

			}
		}
	})

	// æä¾›é™æ€æ–‡ä»¶ï¼ˆtest.htmlï¼‰
	r.StaticFile("/test.html", "./test.html")
	r.StaticFile("/", "./test.html") // æ ¹è·¯å¾„ä¹Ÿè¿”å› test.html

	//å¯åŠ¨ HTTP æœåŠ¡å™¨
	log.Println("ğŸš€ Gateway is running on :8081")
	if err := r.Run(":8081"); err != nil {
		log.Fatalf("âŒ Failed to boost gateway :%v", err)
	}

}
