package main

import (
	"context"
	"log"
	"time"

	vehiclev1 "github.com/xuewentao/cheya/api/vehicle/v1"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)
func main() {
	//1.è¿æ¥ grpc æœåŠ¡å™¨
	//è¿™é‡Œæ˜¯ client æ‰€ä»¥ server æ˜¯ç›‘å¬ è¿™é‡Œæ˜¯ Dialè¢«å¼ƒç”¨ç°åœ¨æ˜¯ NewClient
	// WithTransportCredentials(insecure...) è¡¨ç¤ºä¸ä½¿ç”¨ TLS (ä»…é™å†…ç½‘/å¼€å‘)
	conn,err := grpc.NewClient("localhost: 50051",
		grpc.WithTransportCredentials(insecure.NewCredentials()),
	)

	if err != nil{
		log.Fatalf("âŒfailed to create client: %v",err)
	}
	defer conn.Close()

	//åˆ›å»º client
	c := vehiclev1.NewVehicleServiceClient(conn)

	//è®¾ç½®è¶…æ—¶ 1s
	ctx,cancel := context.WithTimeout(context.Background(),time.Second)
	defer cancel()

	//mock ä¸€è¾†æ–°è½¦
	timestamp := time.Now().Format("150405")
	vin := "VIN-TEST-" + timestamp
	plate := "æ²ªA-" + timestamp

	log.Printf("ğŸ› ï¸  Creating Vehicle with VIN: %s ...", vin)

	createResp,err := c.CreateVehicle(ctx,&vehiclev1.CreateVehicleRequest{
		Vin: vin,
		LicensePlate: plate,
	})

	if err != nil {
		log.Printf("âš ï¸  Create failed: %v", err)
	} else {
		log.Printf("âœ… Vehicle Created! DB_ID: %s", createResp.VehicleId)
	}

	//æŸ¥è¯¢
	log.Printf("ğŸ” Querying Vehicle with VIN: %s ...", vin)
	GetResp,err := c.GetVehicle(ctx,&vehiclev1.GetVehicleRequest{
		VehicleId: vin,
	})
	if err != nil {
		log.Fatalf("âŒ Get failed: %v", err)
	}
	//æ‰“å°ç»“æœ
	v := GetResp.Vehicle
	log.Printf("ğŸ‰ Found Vehicle:")
	log.Printf("   - VIN:   %s", v.Vin)
	log.Printf("   - Plate: %s", v.LicensePlate)
	// è¿™é‡Œçš„ Status æ˜¯ä¸ªæšä¸¾å€¼ (0, 1, 2)ï¼Œæ‰“å°å‡ºæ¥æ˜¯æ•°å­—æˆ– String (å–å†³äº Protobuf ç”Ÿæˆé…ç½®)
	log.Printf("   - Status: %v", v.Status)

}