package main

import (
	"context"
	"log"
	"net/http"
	"time"

	"github.com/gin-gonic/gin"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"

	vehiclev1 "github.com/xuewentao/cheya/api/vehicle/v1"
)

func main() {
	//åˆå§‹åŒ– client  ç”¨ç½‘å…³æ¥ä½¿ç”¨ http
	//ç”Ÿäº§ç¯å¢ƒä¸€èˆ¬ä½¿ç”¨æœåŠ¡å‘ç°
	conn ,err := grpc.NewClient("localhost: 50051",
			grpc.WithTransportCredentials(insecure.NewCredentials()),
	)
	if err != nil{
		log.Fatalf("âŒ Failed to connect gRPC server %v",err)
	}
	defer conn.Close()
	//åˆ›å»º grpc client å­˜æ ¹
	vehicleClient := vehiclev1.NewVehicleServiceClient(conn)	
	log.Println("âœ… Connected to Vehicle Service(gRPC)")

	//2.åˆå§‹åŒ– Gin
	r := gin.Default()

	//å®šä¹‰è·¯ç”± GET /api/vi/vehicles/:id
	r.GET("/api/v1/vehicles/:id",func(c *gin.Context){
		//è·å– URL å‚æ•°
		vehicleID := c.Param("id")

		//è®¾ç½®è¶…æ—¶ä¸Šä¸‹æ–‡
		ctx,concel := context.WithTimeout(context.Background(),2 * time.Second)
		defer concel()

		//å‘èµ· gRPC è°ƒç”¨
		resp,err := vehicleClient.GetVehicle(ctx,&vehiclev1.GetVehicleRequest{
			VehicleId : vehicleID,
		})
		//é”™è¯¯å¤„ç†
		if err != nil{
			log.Println("âŒ gRPC called failed :%v",err)
			//è¿”å› 500 404
			c.JSON(http.StatusInternalServerError,gin.H{
				"error": err.Error(),
			})
			return
		}
		//æˆåŠŸå“åº”
		c.JSON(http.StatusOK,gin.H{
			"code" : 200,
			"message" : "success",
			"data" : resp.Vehicle,
		})
	})
	//å¯åŠ¨ HTTP æœåŠ¡å™¨
	log.Println("ğŸš€ Gateway is running on :8080")
	if err := r.Run(":8081"); err != nil {
		log.Fatalf("âŒ Failed to boost gateway :%v",err)
	}

}